css change for add file label

--- a/ReduxTutorial/src/styles/containers/file-upload-container.css
+++ b/ReduxTutorial/src/styles/containers/file-upload-container.css
@@ -16,6 +16,56 @@
     text-decoration: underline;
 }
 
+.file-upload-button {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.add-files-icon {
+    display: inline-block;
+    line-height: 1;
+    background: white;
+    height: 12px;
+    position: relative;
+    width: 2.4px;
+    margin: 0 9.8px 0 4.8px;
+    top: 1px;
+}
+
+.add-files-icon:after {
+    background: white;
+    content: "";
+    height: 2.4px;
+    left: -4.8px;
+    position: absolute;
+    top: 4.8px;
+    width: 12px;
+}
+
+.file-upload-button-success {
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+}
+
+.file-upload-button-success:hover,
+.file-upload-button-success:active,
+.file-upload-button-success:focus {
+    color: #fff;
+    background-color: #449d44;
+    border-color: #398439;
+}
+
 .hide {
     display: none;
 }
