add detach file functionality

--- a/ReduxTutorial/src/styles/containers/file-upload-container.css
+++ b/ReduxTutorial/src/styles/containers/file-upload-container.css
@@ -161,6 +161,15 @@
     background-color: #F9F9F9;
 }
 
+.fade {
+    opacity: 0;
+    transition: opacity .15s linear;
+}
+
+.fade.in {
+    opacity: 1;
+}
+
 .hide {
     display: none;
 }
