--- a/ReduxTutorial/src/styles/components/document-upload-list-item.css
+++ b/ReduxTutorial/src/styles/components/document-upload-list-item.css
@@ -7,3 +7,48 @@
 .document-upload-list-item-text-container {
     line-height: 1.42857143;
 }
+
+.file-upload-file-preview {
+    width: 20%;
+}
+
+.file-name-container {
+    width: 30%;
+}
+
+.file-name {
+    width: 95%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.file-upload-progress {
+    height: 20px;
+    margin-top: 15px;
+    overflow: hidden;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+    width: 95%;
+}
+
+.file-upload-progress-bar {
+    animation: progress-bar-stripes 2s linear infinite;
+    background-color: #5cb85c;
+    width: 0;
+    height: 100%;
+    background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
+    background-size: 40px 40px;
+    transition: width .6s ease;
+}
+
+@keyframes progress-bar-stripes {
+    from {
+        background-position: 40px 0
+    }
+
+    to {
+        background-position: 0 0
+    }
+}
