auto create folder uploads and files.json and files-location.json if they don't exists

--- a/ReduxTutorial/src/styles/components/document-upload-list-item.css
+++ b/ReduxTutorial/src/styles/components/document-upload-list-item.css
@@ -17,11 +17,13 @@
     width: 30%;
 }
 
-.file-name {
+.file-name,
+.file-uploaded-link {
     width: 95%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    display: block;
 }
 
 .file-upload-progress {
