--- a/ReduxTutorial/src/styles/components/document-upload-list-item.css
+++ b/ReduxTutorial/src/styles/components/document-upload-list-item.css
@@ -1,3 +1,13 @@
+a {
+    color: #428bca;
+    text-decoration: none;
+}
+
+a:hover, a:focus {
+    color: #2a6496;
+    text-decoration: underline;
+}
+
 .document-upload-list-item-container {
     display: inline-block;
     width: 25%;
@@ -23,6 +33,16 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    display: block;
+}
+
+.file-upload-date {
+    width: 95%;
+    margin-top: 15px;
+    line-height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     display: block;
 }
 
