--- a/ReduxTutorial/src/styles/containers/file-upload-container.css
+++ b/ReduxTutorial/src/styles/containers/file-upload-container.css
@@ -43,22 +43,34 @@
 .add-files-icon {
     display: inline-block;
     line-height: 1;
-    background: white;
+    /*background: white;*/
     height: 12px;
     position: relative;
-    width: 2.4px;
-    margin: 0 9.8px 0 4.8px;
+    /*width: 2.4px;*/
+    width: 12px;
+    margin: 0 5px 0 0;
     top: 1px;
 }
 
+.add-files-icon:before,
 .add-files-icon:after {
     background: white;
     content: "";
-    height: 2.4px;
-    left: -4.8px;
-    position: absolute;
-    top: 4.8px;
-    width: 12px;
+    height: 12px;
+    /*left: -4.5px;*/
+    /*position: absolute;*/
+    /*top: 4.5px;*/
+    width: 3px;
+    display: inline-block;
+}
+
+.add-files-icon:before {
+    position: relative;
+    left: 3px;
+}
+
+.add-files-icon:after {
+    transform: rotate(90deg);
 }
 
 .start-upload-icon,
