continue image viewer

--- a/ReduxTutorial/src/shared/ImageViewer/styles/container/image-viewer-container.css
+++ b/ReduxTutorial/src/shared/ImageViewer/styles/container/image-viewer-container.css
@@ -58,3 +58,72 @@
 .close-symbol:after {
     transform: rotate(-45deg);
 }
+
+.save-file-link {
+    position: absolute;
+    top: 38px;
+    right: 100px;
+    width: 50px;
+}
+
+.download-icon
+{
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-decoration: none;
+    opacity: 0.8;
+}
+
+.download-icon:hover {
+    opacity: 1;
+}
+
+.download-icon .download-icon-span
+{
+    display: block;
+    cursor: pointer;
+    position: relative;
+    height: 30px;
+    margin: auto;
+    border: 6px solid white;
+    border-top: transparent;
+}
+
+.download-icon .download-icon-span:before,
+.download-icon .download-icon-span:after
+{
+    content: '';
+    display: block;
+    position: absolute;
+}
+
+.download-icon:hover .download-icon-span:before,
+.download-icon:hover .download-icon-span:after
+{
+    animation: bounce .5s infinite alternate;
+}
+
+.download-icon .download-icon-span:before{
+    left: 15px;
+    top: -9px;
+
+    height: 10px;
+    background: white;
+}
+.download-icon .download-icon-span:after
+{
+    left: 10px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid white;
+}
+
+@keyframes bounce {
+    from {
+        transform: translateY(-10px);
+    }
+
+    to {
+        transform: translateY(0);
+    }
+}
