--- a/Material Design/MainPage.css
+++ b/Material Design/MainPage.css
@@ -9,52 +9,41 @@ body {
 }
 
 .card {
+    width: 100px;
+    height: 100px;
+    margin: 100px 100px 100px;
     background: #FFF;
-    width: 80px;
-    height: 80px;
-    margin: 60px 10px 10px 60px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
     opacity: 0;
-    border-radius: 5px;
 }
 
-.card:hover,
-.card:focus {
+.card:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
-.ripple {
+.ripple{
     position: absolute;
     top:0; left:0; bottom:0; right:0;
     overflow: hidden;
-    -webkit-transform: scale3d(1,1,1); /* to contain zoomed ripple */
-    transform: translate3d(1,1,1);
+    -webkit-transform: translateZ(0); /* to contain zoomed ripple */
+    transform: translateZ(0);
     border-radius: inherit; /* inherit from parent (rounded buttons etc) */
     pointer-events: none; /* allow user interaction */
 }
-
-.ripple-effect {
+.rippleWave{
     backface-visibility: hidden;
     position: absolute;
     border-radius: 50%;
-    transform: scale3d(.7,.7,.7); -webkit-transform: scale3d(.7,.7,.7);
-    background: #CCC;
+    transform: scale(0.7); -webkit-transform: scale(0.7);
+    background: rgba(255,255,255, 1);
     opacity: 0.45;
-    animation: ripple 1s  forwards;
-    -webkit-animation: ripple 1s forwards;
+    animation: ripple 2.4s  forwards;
+    -webkit-animation: ripple 2.4s forwards;
 }
-
 @keyframes ripple {
-    100% {
-        transform: scale3d(24,24,24);
-        opacity: 0;
-    }
+    to {transform: scale(24); opacity:0;}
 }
-
 @-webkit-keyframes ripple {
-    100% {
-        transform: scale3d(24,24,24);
-        opacity: 0;
-    }
+    to {-webkit-transform: scale(24); opacity:0;}
 }
