--- a/react-redux-test/src/components/App.css
+++ b/react-redux-test/src/components/App.css
@@ -1,57 +1,61 @@
 .App {
-  text-align: center;
-  min-height: 100vh;
+    text-align: center;
+    min-height: 100vh;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+    background-color: #222;
+    height: 150px;
+    padding: 20px;
+    color: white;
 }
 
 .App-intro {
-  font-size: large;
+    font-size: large;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .main-content-container {
-  perspective: 1000px;
-  transform-style: preserve-3d;
-  position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    display: flex;
 }
 
 .fade-enter {
-  opacity: 0;
-  transform: translate3d(100%,0, -1000px);
-  position: absolute;
-  width: 100%;
+    opacity: 0;
+    transform: translate3d(100%, 0, -1000px);
 }
 
 .fade-enter.fade-enter-active {
-  opacity: 1;
-  transition: opacity 500ms cubic-bezier(0.4,0,0.2,1), transform 500ms cubic-bezier(0.4,0,0.2,1);
-  transform: translate3d(0,0,0);
+    opacity: 1;
+    transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate3d(0, 0, 0);
 }
 
 .fade-leave {
-  opacity: 1;
-  transform: translate3d(0,0,0);
-  position: absolute;
-  width: 100%;
+    opacity: 1;
+    transform: translate3d(-100%, 0, 0);
 }
 
 .fade-leave.fade-leave-active {
-  opacity: 0;
-  transition: opacity 500ms cubic-bezier(0.4,0,0.2,1), transform 500ms cubic-bezier(0.4,0,0.2,1);
-  transform: translate3d(-100%,0, -1000px);
+    opacity: 0;
+    transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate3d(-200%, 0, -1000px);
+}
+
+.min-width-100 {
+    min-width: 100%;
 }
