--- a/react-redux-test/src/components/App.css
+++ b/react-redux-test/src/components/App.css
@@ -32,6 +32,7 @@
     perspective: 1000px;
     transform-style: preserve-3d;
     display: flex;
+    flex-direction: row-reverse;
 }
 
 .fade-enter {
@@ -47,13 +48,13 @@
 
 .fade-leave {
     opacity: 1;
-    transform: translate3d(-100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
 }
 
 .fade-leave.fade-leave-active {
     opacity: 0;
     transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translate3d(-200%, 0, -1000px);
+    transform: translate3d(0, 0, -1000px);
 }
 
 .min-width-100 {
